GNU grep NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug fixes

  grep -P could misbehave.  While multi-byte mode is only supported by PCRE
  with UTF-8 locales, grep did not activate it.  This would cause failures
  to match multibyte characters against some regular expressions, especially
  those including the '.' or '\p' metacharacters.

** New features

  grep -P can now use a just-in-time compiler to greatly speed up matches,
  This feature is transparent to the user; no flag is required to enable
  it.  It is only available if the corresponding support in the PCRE
  library is detected when grep is compiled.


* Noteworthy changes in release 2.14 (2012-08-20) [stable]

** Bug fixes

  grep -i '^$' could exit 0 (i.e., report a match) in a multi-byte locale,
  even though there was no match, and the command generated no output.
  E.g., seq 2 | LC_ALL=en_US.utf8 grep -il '^$' would mistakenly print
  "(standard input)".  Related, seq 9 | LC_ALL=en_US.utf8 grep -in '^$'
  would print "2:4:6:8:10:12:14:16" and exit 0.  Now it prints nothing
  and exits with status of 1.  [bug introduced in grep-2.6]

  'grep' no longer falsely reports text files as being binary on file
  systems that compress contents or that store tiny contents in metadata.


* Noteworthy changes in release 2.13 (2012-07-04) [stable]

** Bug fixes

  grep -i, in a multi-byte locale, when matching a line containing a character
  like the UTF-8 Turkish I-with-dot (U+0130) (whose lower-case representation
  occupies fewer bytes), would print an incomplete output line.
  Similarly, with a matched line containing a character (e.g., the Latin
  capital I in a Turkish UTF-8 locale), where the lower-case representation
  occupies more bytes, grep could print garbage.
  [bug introduced in grep-2.6]

  --include and --exclude can again be combined, and again apply to
  the command line, e.g., "grep --include='*.[ch]' --exclude='system.h'