@@ -19,6 +19,7 @@ Bruno Haible               <haible@ilog.fr>
 Christian Groessler        <cpg@aladdin.de>
 Corinna Vinschen           <vinschen@redhat.com>
 Dagobert Michelsen         <dam@opencsw.org>
+Daisuke GOTO               <gotoh@m-design.com>
 David Clissold             <cliss@austin.ibm.com>
 David J MacKenzie          <djm@catapult.va.pubnix.com>
 David O'Brien              <obrien@freebsd.org>
